// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SimplePagination /> should match snapshot for hasNext 1`] = `
<nav
  aria-label="pagination"
  class="pagination"
>
  <button
    aria-label="previous page"
    class="root variantSecondary small rounded iconOnly chevron disabled"
    disabled=""
    type="button"
  >
    <div
      class="body"
    >
      <i
        class="root icon"
        style="width: 24px; height: 24px;"
      >
        <svg
          baseProfile="full"
          fill="currentColor"
          viewBox="0 0 24 24"
        >
          <path
            d="M15.414 16.584l-4.586-4.586 4.586-4.586-1.415-1.414-6 6 6 6 1.415-1.414z"
          />
        </svg>
      </i>
    </div>
  </button>
  <button
    aria-label="next page"
    class="root variantSecondary small rounded iconOnly chevron"
    type="button"
  >
    <div
      class="body"
    >
      <i
        class="root icon"
        style="width: 24px; height: 24px;"
      >
        <svg
          baseProfile="full"
          fill="currentColor"
          viewBox="0 0 24 24"
        >
          <path
            d="M8.585 16.584l4.586-4.586-4.586-4.586L10 5.998l6 6-6 6-1.414-1.414z"
          />
        </svg>
      </i>
    </div>
  </button>
</nav>
`;

exports[`<SimplePagination /> should match snapshot for hasNext and hasPrevious 1`] = `
<nav
  aria-label="pagination"
  class="pagination"
>
  <button
    aria-label="previous page"
    class="root variantSecondary small rounded iconOnly chevron"
    type="button"
  >
    <div
      class="body"
    >
      <i
        class="root icon"
        style="width: 24px; height: 24px;"
      >
        <svg
          baseProfile="full"
          fill="currentColor"
          viewBox="0 0 24 24"
        >
          <path
            d="M15.414 16.584l-4.586-4.586 4.586-4.586-1.415-1.414-6 6 6 6 1.415-1.414z"
          />
        </svg>
      </i>
    </div>
  </button>
  <button
    aria-label="next page"
    class="root variantSecondary small rounded iconOnly chevron"
    type="button"
  >
    <div
      class="body"
    >
      <i
        class="root icon"
        style="width: 24px; height: 24px;"
      >
        <svg
          baseProfile="full"
          fill="currentColor"
          viewBox="0 0 24 24"
        >
          <path
            d="M8.585 16.584l4.586-4.586-4.586-4.586L10 5.998l6 6-6 6-1.414-1.414z"
          />
        </svg>
      </i>
    </div>
  </button>
</nav>
`;

exports[`<SimplePagination /> should match snapshot for hasPrevious 1`] = `
<nav
  aria-label="pagination"
  class="pagination"
>
  <button
    aria-label="previous page"
    class="root variantSecondary small rounded iconOnly chevron"
    type="button"
  >
    <div
      class="body"
    >
      <i
        class="root icon"
        style="width: 24px; height: 24px;"
      >
        <svg
          baseProfile="full"
          fill="currentColor"
          viewBox="0 0 24 24"
        >
          <path
            d="M15.414 16.584l-4.586-4.586 4.586-4.586-1.415-1.414-6 6 6 6 1.415-1.414z"
          />
        </svg>
      </i>
    </div>
  </button>
  <button
    aria-label="next page"
    class="root variantSecondary small rounded iconOnly chevron disabled"
    disabled=""
    type="button"
  >
    <div
      class="body"
    >
      <i
        class="root icon"
        style="width: 24px; height: 24px;"
      >
        <svg
          baseProfile="full"
          fill="currentColor"
          viewBox="0 0 24 24"
        >
          <path
            d="M8.585 16.584l4.586-4.586-4.586-4.586L10 5.998l6 6-6 6-1.414-1.414z"
          />
        </svg>
      </i>
    </div>
  </button>
</nav>
`;
